[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/godot-rollback-netcode/log_inspector/monogram_extended.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://addons/godot-rollback-netcode/NetworkTimer.gd" type="Script" id=2]
[ext_resource path="res://board/Goal.gd" type="Script" id=3]

[sub_resource type="SGCircleShape2D" id=3]
radius = 2294696

[sub_resource type="DynamicFont" id=2]
size = 96
font_data = ExtResource( 1 )

[node name="Goal" type="SGArea2D" groups=["network_sync"]]
collision_layer = 0
collision_mask = 128
script = ExtResource( 3 )
color = Color( 0, 0.454902, 0.694118, 1 )

[node name="SGCollisionShape2D" type="SGCollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="NetworkTimer" type="Node" parent="."]
script = ExtResource( 2 )
one_shot = true
wait_ticks = 20

[node name="RenderLayer" type="Node2D" parent="."]
z_index = 1

[node name="Score" type="Label" parent="RenderLayer"]
margin_left = -15.0
margin_top = -45.0
margin_right = 21.0
margin_bottom = 33.0
custom_colors/font_color = Color( 0.988235, 0.74902, 0.286275, 1 )
custom_fonts/font = SubResource( 2 )
text = "0"

[connection signal="timeout" from="NetworkTimer" to="." method="_on_NetworkTimer_timeout"]
